Bug 315657 - Middle-click URL activation should use PRIMARY, not CLIPBOARD
Summary: Middle-click URL activation should use PRIMARY, not CLIPBOARD
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: latest git snapshot
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Andrea Diamantini
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-22 22:09 UTC by Thiago Macieira
Modified: 2013-02-24 10:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thiago Macieira 2013-02-22 22:09:40 UTC
When the option to "Load Clipboard URL" is selected for the middle-click action, Rekonq should use PRIMARY, not CLIPBOARD. That's because middle-click pasting anywhere would paste the contents of PRIMARY, so one would expect it to react like a paste.

Reproducible: Always

Steps to Reproduce:
1. Make sure that CLIPBOARD and PRIMARY are not being kept in sync by an external agent (e.g., klipper)
2. Select some text and Ctrl+C
3. Select a URL with the mouse only and do not Ctrl+C it
4. Middle-click somewhere in a webpage in rekonq
Actual Results:  
The text from step 2 is loaded or searched for.

Expected Results:  
The URL from step 3 is loaded.
Comment 1 Thiago Macieira 2013-02-22 22:15:38 UTC
Proposed fix: https://git.reviewboard.kde.org/r/109107/
Comment 2 Andrea Diamantini 2013-02-24 10:52:26 UTC
Git commit 8c7adfbad1c8568a55cb135f560ea06463cd3491 by Andrea Diamantini, on behalf of Thiago Macieira.
Committed on 24/02/2013 at 11:47.
Pushed by adjam into branch 'master'.

Make rekonq use the selection (PRIMARY) for MMB clicks

The Selection is what usually gets pasted when one does an MMB click,
so it makes sense to use that as search term or URL to load.

(Thanks, Thiago!)
Related: bug 314551
REVIEW: 109107
REVIEWED-BY: adjam

M  +1    -1    src/webtab/webview.cpp

http://commits.kde.org/rekonq/8c7adfbad1c8568a55cb135f560ea06463cd3491