Make rekonq use the selection (PRIMARY) for MMB clicks

The Selection is what usually gets pasted when one does an MMB click,
so it makes sense to use that as search term or URL to load.

(Thanks, Thiago!)

BUG: 315657
BUG: 314551
REVIEW: 109107
REVIEWED-BY: adjam